--- a/package.json
+++ b/package.json
@@ -16,9 +16,18 @@
     "@angular/compiler": "~8.0.0",
     "@angular/core": "~8.0.0",
     "@angular/forms": "~8.0.0",
+    "@angular/http": "^7.2.15",
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
+    "bootstrap": "^4.3.1",
+    "cors": "^2.8.5",
+    "dotenv": "^8.1.0",
+    "express-session": "^1.16.2",
+    "helmet": "^3.21.1",
+    "mongoose": "^5.7.1",
+    "morgan": "^1.9.1",
+    "multi-part": "^3.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
